test/corpus/basic.txt
==================
Basic Function and Semicolon test
==================
def my_func(a: int) -> str {
  pub mut x = a + 5
  x = x * 2;
  print(x)
}
---
(source_file
  (function_definition
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (builtin_types)))
    type: (builtin_types)
    block: (block
      (variable_declaration
        (keyword_modifier)
        (keyword_modifier)
        (identifier)
        (binary_expression
          left: (identifier)
          operator: "+"
          right: (number)))
      (expression_statement
        (assignment_expression
          left: (identifier)
          operator: "="
          right: (binary_expression
            left: (identifier)
            operator: "*"
            right: (number))))
      (expression_statement
        (call_expression
          function: (identifier)
          (identifier))))))

==================
Unary vs Binary Precedence and Comments
==================
# This is a comment
x = -a + b * c ** d
---
(source_file
  (expression_statement
    (assignment_expression
      left: (identifier)
      operator: "="
      right: (binary_expression
        left: (unary_expression
          operator: "-"
          argument: (identifier))
        operator: "+"
        right: (binary_expression
          left: (identifier)
          operator: "*"
          right: (binary_expression
            left: (identifier)
            operator: "**"
            right: (identifier)))))))
